# flipper_scripts

./: .gitignore  README.md
flipperbot/: FLIPPERBOT_REDTEAM_ANALYSIS.md  f44b1874d8cce12b_bot.py  f44b1874d8cce12b_run.ps1  f44b1874d8cce12b_setup.ps1
flipperbot/creds_extractor/: Cargo.toml
flipperbot/creds_extractor/src/: main.rs
flipperbot/payloads/: FlipperBot-Payload-RunDialog.txt  FlipperBot-Payload-enUS.txt  FlipperBot-Payload-esLA.txt
